--- a/multiple-velocities/0_update_featurizer.ipynb
+++ b/multiple-velocities/0_update_featurizer.ipynb
@@ -12,8 +12,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.9.16/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(f\"{os.getcwd()}/../\")\n",
     "from stopping_power_ml.features import ProjectileVelocity\n",
     "import pickle as pkl\n",
     "import os"
@@ -111,13 +123,20 @@
     " with open('featurizer.pkl', 'wb') as fp:\n",
     "        pkl.dump(featurizer, fp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -129,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
